<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_future"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_future" />
        <item
            android:id="@+id/nav_shared"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_shared" />
        <!--<item
            android:id="@+id/nav_friends_request"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="@string/menu_friends_requests" />
-->
    </group>


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_add_new_account"
                android:icon="@drawable/ic_library_add_black_24dp"
                android:title="@string/menu_add_new_accounte" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_bubble_chart_black_24dp"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
